--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "immer": "^9.0.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "typescript": "^4.6.3"
   },
